java.net.URL deprecation cleanup