@@ -16,7 +16,8 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.IOException;
-import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.EnumSet;
 
@@ -37,14 +38,16 @@ public class DefaultUserAgentTest {
 
 	@BeforeEach
 	public void setUp() throws DocumentException, ParserConfigurationException {
-		EnumSet<Parser.Flag> parserFlags = EnumSet.of(Parser.Flag.STARHACK, Parser.Flag.IEVALUES, Parser.Flag.IEPRIO);
+		EnumSet<Parser.Flag> parserFlags = EnumSet.of(Parser.Flag.STARHACK, Parser.Flag.IEVALUES,
+				Parser.Flag.IEPRIO);
 		agent = new MockUserAgent(parserFlags, false);
 		agent.setOriginPolicy(DefaultOriginPolicy.getInstance());
 	}
 
 	@Test
-	public void getSelectedStyleSheetSet() throws MalformedURLException, IOException, DocumentException {
-		CSSDocument doc = agent.readURL(new URL(MockURLConnectionFactory.SAMPLE_URL));
+	public void getSelectedStyleSheetSet()
+			throws DocumentException, URISyntaxException, IOException {
+		CSSDocument doc = agent.readURL(new URI(MockURLConnectionFactory.SAMPLE_URL).toURL());
 		assertNotNull(doc);
 		assertEquals("http://www.example.com/", doc.getBaseURI());
 		assertEquals(MockURLConnectionFactory.SAMPLE_URL, doc.getDocumentURI());
@@ -62,8 +65,9 @@ public class DefaultUserAgentTest {
 	}
 
 	@Test
-	public void getSelectedStyleSheetSetHeader() throws IOException, DocumentException {
-		URL url = new URL("http://www.example.com/xhtml/htmlsample.html");
+	public void getSelectedStyleSheetSetHeader()
+			throws IOException, DocumentException, URISyntaxException {
+		URL url = new URI("http://www.example.com/xhtml/htmlsample.html").toURL();
 		agent.getConnectionFactory().setHeader("html", "Default-Style", "Alter 2");
 		CSSDocument xhtmlDoc = agent.readURL(url);
 		DOMStringList list = xhtmlDoc.getStyleSheetSets();
@@ -79,8 +83,9 @@ public class DefaultUserAgentTest {
 	}
 
 	@Test
-	public void getSelectedStyleSheetSetMeta() throws IOException, DocumentException {
-		URL url = new URL("http://www.example.com/xhtml/meta-default-style.html");
+	public void getSelectedStyleSheetSetMeta()
+			throws IOException, DocumentException, URISyntaxException {
+		URL url = new URI("http://www.example.com/xhtml/meta-default-style.html").toURL();
 		agent.getConnectionFactory().registerURL(url.toExternalForm(), "meta-default-style.html");
 		CSSDocument xhtmlDoc = agent.readURL(url);
 		DOMStringList list = xhtmlDoc.getStyleSheetSets();
@@ -102,8 +107,9 @@ public class DefaultUserAgentTest {
 	 * purpose."
 	 */
 	@Test
-	public void getSelectedStyleSheetSetMetaOverride() throws IOException, DocumentException {
-		URL url = new URL("http://www.example.com/xhtml/meta-default-style.html");
+	public void getSelectedStyleSheetSetMetaOverride()
+			throws IOException, DocumentException, URISyntaxException {
+		URL url = new URI("http://www.example.com/xhtml/meta-default-style.html").toURL();
 		MockURLConnectionFactory connFactory = agent.getConnectionFactory();
 		connFactory.registerURL(url.toExternalForm(), "meta-default-style.html");
 		connFactory.setHeader("html", "Default-Style", "Alter 2");
